# school_comparisons

./: .gitignore  CLAUDE.md  README.md  analysis.py  main.py  pyproject.toml  queries.txt  requirements.txt
schools/: allecijfers.py  discovery.py  duo.py  duo_datasets.py  pipeline.py  scholenopdekaart.py
